--- a/config/locales/devise.es.yml
+++ b/config/locales/devise.es.yml
@@ -23,7 +23,7 @@ es:
       timeout: 'Your session expired, please sign in again to continue.'
       inactive: 'Your account was not activated yet.'
     sessions:
-      signed_in: 'Signed in successfully.'
+      signed_in: 'Se ha registrado exitosamente.'
       signed_out: 'Signed out successfully.'
     passwords:
       send_instructions: 'You will receive an email with instructions about how to reset your password in a few minutes.'
