--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,7 +1,7 @@
 'es':
   date:
     formats:
-      default: '%d/%m/%Y'
+      default: '%d/%m'
       short: '%d de %Y'
       long: '%d de %B de %Y'
     order:
