--- a/config/locales/simple_form.es.yml
+++ b/config/locales/simple_form.es.yml
@@ -4,12 +4,14 @@ es:
     "no": 'No'
     required:
       text: 'required'
+      input: 'required'
       mark: '*'
       # You can uncomment the line below if you need to overwrite the whole required html.
       # When using html, text and mark won't be used.
       # html: '<abbr title="required">*</abbr>'
     error_notification:
       default_message: "Se han encontrado errores:"
+      customer: "asdfa"
     # Labels and hints examples
     # labels:
     #   defaults:
